--- a/index.html
+++ b/index.html
@@ -3,29 +3,148 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Maquetacón con grids</title>
+	<title>Proyecto Web</title>
+	<link rel="icon" href="images/logo.png" sizes="32x32" />
+    <link rel="icon" href="images/logo.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="images/logo.png" />
+
+	<!-- Importación del CSS -->
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+	<!-- Importación de tipos de Fuentes -->
+	<link href="https://fonts.googleapis.com/css2?family=Istok+Web&family=Mate&display=swap" rel="stylesheet">
+
+	<!-- Importación de fuentes de iconos -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
-
+	<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
 </head>
 <body>
 	<div class="contenedor">
+
 		<header class="cabeceraPrincipal">
-			<h1>Cabecera</h1>
+			<section class="logotipo"><img src="images/logotipoFood.png"></section>
+			<nav class="menuPrincipal mayusculas">
+				<a href="#">Inicio</a>
+				<a href="#">Proyecto</a>
+				<a href="#">Carta</a>
+				<a href="#">Servicios</a>
+			</nav>
 		</header>
-		<nav class="menuPrincipal">
-			<h2>Menú Principal</h2>
-		</nav>
-		<main class="contenido"><h2>Contenido</h2></main>
-		<aside class="sidebar">
-			<h2>Sidebar</h2>
-		</aside>
-		<section class="noticia1"><h2>Noticia 1</h2></section>
-		<section class="noticia2"><h2>Noticia 2</h2></section>
-		<footer class="piePagina"><h6>Derechos Reservados UTPL 2022</h6></footer>
+
+		<section class="sliderPrincipal">
+			<img src="images/slider1.png" title="Fondo">
+			<button class="btn colorArtic">Reservar</button>
+		</section>
+
+		<section class="titulo">
+			<h2 class="colorMarron">Platos Recomendados<h2>
+		</section>
+		
+		<section class="plato1">
+			<img src="images/plato1.png" title="Pescado Ahumado" alt="Realice su pedido">
+			<article class="card1">
+				<h3>Pescado Ahumado</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et.</p>
+				<div class="derecha">	
+					<button class="btnIcon" type="submit"><iconify-icon class="icono" icon="bi:arrow-up-right-square-fill"></iconify-icon></button>
+				</div>
+			</article>
+		</section>
+
+		<section class="plato2">
+			<img src="images/plato2.png" title="Huevos Cocidos" alt="Realice su pedido">
+			<article class="card2">
+				<h3>Huevos Cocidos</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et.</p>
+				<div class="derecha">	
+					<button class="btnIcon" type="submit"><iconify-icon class="icono" icon="bi:arrow-up-right-square-fill"></iconify-icon></i></button>
+				</div>
+			</article>
+		</section>
+
+		<section class="tarjeta espacio">
+			<div class="tarjeta1">
+				<img src="images/cocinero.png">
+				<article class="artic1">
+					<h3 class="colorMarron">Cheft Arturo</h3>
+					<p class="colorArtic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et. </p>
+				</article>
+			</div>
+
+			<div class="tarjeta2">
+				<article class="artic2">
+					<h3 class="colorMarron">Grand Western Steaks</h3>
+					<p class="colorArtic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et. </p>
+				</article>
+				<img src="images/patrocinador1.png">
+			</div>
+
+			<div class="tarjeta3">
+				<img src="images/patrocinador2.png">
+				<article class="artic3">
+					<h3 class="colorMarron">Super Pollo</h3>
+					<p class="colorArtic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et. </p>
+				</article>
+			</div>
+
+			<div class="tarjeta4">
+				<article class="artic4">
+					<h3 class="colorMarron">Cheft Laura</h3>
+					<p class="colorArtic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et. </p>
+				</article>
+				<img src="images/cocinera.png">
+			</div>
+		</section>
+
+		<section class="sponsor">
+			<div class="degradado"></div>
+			<img src="images/fondo2.png">
+			<div class="contenedor1">
+				<h3>Localización</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse risus dui, convallis rutrum tortor ut, consectetur volutpat urna. In eget diam purus. Quisque non tristique purus. Aenean egestas velit ut justo iaculis, a fringilla mauris.</p>
+			</div>
+			<div class="contenedor2">
+				<h3>Encuéntranos en estos países</h3>
+				<ul>
+					<li>Ecuador</li>
+					<li>México</li>
+					<li>Colombia</li>
+					<li>Perú</li>
+				</ul>
+			</div>
+			<div class="contenedor3">
+				<h3>Categorías</h3>
+				<div class="lista1">
+					<ul>
+						<li>Fritos</li>
+						<li>Mariscos</li>
+						<li>Verduras</li>
+					</ul>
+				</div>
+
+				<div class="lista2">
+					<ul>
+						<li>Granos</li>
+						<li>Sopas</li>
+						<li>Carnes</li>
+					</ul>
+				</div>
+			</div>
+			<div class="contenedor4">
+				<h3>Redes Sociales</h3>
+				<nav class="redesSociales">
+					<a href="#"><iconify-icon icon="et:facebook"></iconify-icon></a>
+					<a href="#"><iconify-icon icon="ph:instagram-logo-thin" width="50" height="50"></iconify-icon></a>
+					<a href="#"><iconify-icon icon="et:twitter"></iconify-icon></a>
+				</nav>
+			</div>
+		</section>
+
+		<footer class="piePagina">
+			<section class="derechos">
+				<h6 class="colorMarron">© Derechos Reservados por Francisco González en colaboración con la Universidad Técnica Particular de Loja</h6>
+			</section>
+		</footer>
 	</div>
 </body>
-</html>>
+</html>
