--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		<header class="cabeceraPrincipal">
 			<section class="logotipo"><img src="images/logotipoFood.png"></section>
 			<nav class="menuPrincipal mayusculas">
-				<a href="#">Inicio</a>
-				<a href="#">Proyecto</a>
+				<a href="index.html">Inicio</a>
+				<a href="internas/proyecto.html">Proyecto</a>
 				<a href="#">Carta</a>
-				<a href="#">Servicios</a>
+				<a href="internas/servicios.html">Servicios</a>
 			</nav>
 		</header>
 
@@ -62,8 +62,9 @@
 			</article>
 		</section>
 
-		<section class="tarjeta espacio">
+		<section class="tarjeta">
 			<div class="tarjeta1">
+				<div class="cuadro"></div>
 				<img src="images/cocinero.png">
 				<article class="artic1">
 					<h3 class="colorMarron">Cheft Arturo</h3>
@@ -76,10 +77,12 @@
 					<h3 class="colorMarron">Grand Western Steaks</h3>
 					<p class="colorArtic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et. </p>
 				</article>
+				<div class="cuadro"></div>
 				<img src="images/patrocinador1.png">
 			</div>
 
 			<div class="tarjeta3">
+				<div class="cuadro"></div>
 				<img src="images/patrocinador2.png">
 				<article class="artic3">
 					<h3 class="colorMarron">Super Pollo</h3>
@@ -92,6 +95,7 @@
 					<h3 class="colorMarron">Cheft Laura</h3>
 					<p class="colorArtic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in pharetra nunc, quis pulvinar est. Nulla finibus lacus nulla, vitae accumsan massa luctus et. </p>
 				</article>
+				<div class="cuadro"></div>
 				<img src="images/cocinera.png">
 			</div>
 		</section>
